--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "telemetry-activity-tracker",
   "displayName": "Telemetry Activity Tracker",
-  "description": "",
+  "description": "VS Code Telemetry Activity Tracker",
+  "icon": "./telemetry_activity_tracker_icon.png",
   "version": "0.0.4",
   "repository": "https://github.com/Taremeh/vscode-activity-tracker",
   "publisher": "HASEL-alakmeh",
